<resources>
    <string name="app_name">VouDoar</string>
    <string name="title_activity_main">Vou Doar</string>

    <string name="facebook_app_id">2094335890849582</string>
    <string name="fb_login_protocol_scheme">fb2094335890849582</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Olá mundo!</string>
    <string name="title_activity_nova_campanha">Nova Campanha</string>
    <string name="botao_avancar">Avançar</string>
    <string name="botao_voltar">Voltar</string>
    <string name="botao_confirmar">Confirmar</string>
    <string name="aviso_implementar_campanhamvp_viewresource">, necessário implementar CampanhaMVP.ViewResource</string>
    <string name="aviso_escolha_tipo_campanha">Escolha o tipo da campanha!</string>
    <string name="aviso_valor_obrigatorio">Obrigatório!</string>
    <string name="aviso_campanha_confirmada">Campanha confirmada!</string>
    <string name="aviso_campanha_incompleta">A campanha não foi informada completamente!</string>
    <string name="cancel">Cancelar</string>
    <string name="campanha_nao_encontrada">Campanha não encontrada!</string>
    <string name="layout_fragment_nao_reconhecido">layout do fragment com id %s não reconhecido!</string>
    <string name="sobre_nos_motivacao_e_objetivo">Sobre nós (motivação e objetivo)</string>
    <string name="atividades_acoes_realizadas">Atividades (ações realizadas)</string>
    <string name="area_de_atuacao">Área de atuação</string>
    <string name="title_activity_campanhas">Campanhas</string>
    <string name="descricao_imagem_campanha">Imagem da campanha</string>
    <string name="no_email_perm">Permissão de e-mail não concedida</string>
    <string name="opcao_nao_acessivel">Opção não está acessível!</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
