<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".campanha.ui.fragment.CampanhaSobreFragment"
    android:padding="16dp">

    /*
    android:textIsSelectable="true"
    android:isScrollContainer="true"
    android:focusable="true"
    */

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/campanha_sobre_edit_objetivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sobre_nos_motivacao_e_objetivo"
            android:ems="200"
            android:minLines="3"
            android:maxLines="10"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/campanha_sobre_edit_atividades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/atividades_acoes_realizadas"
            android:ems="200"
            android:minLines="3"
            android:maxLines="10"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/campanha_sobre_edit_areaatuacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_de_atuacao"
            android:ems="200"
            android:minLines="3"
            android:maxLines="10"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
