<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.tcc.tecdam.voudoar.login.LoginActivity"
    android:background="@color/background_login">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:visibility="gone" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_form"
        android:layout_margin="8dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/text_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029999971"
            app:srcCompat="@drawable/background_filantropia" />

        <TextView
            android:id="@+id/titulo_imagem_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="Vou Doar"

            android:textColor="@color/com_smart_login_code"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <Button
            android:id="@+id/login_facebook_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="Face"
            android:layout_marginTop="10dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_google_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <View
            android:id="@+id/linha_login_email"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/text_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_ou"
            android:text=" ou "
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@color/background_login"
            app:layout_constraintBottom_toBottomOf="@+id/linha_login_email"
            app:layout_constraintEnd_toEndOf="@+id/linha_login_email"
            app:layout_constraintStart_toStartOf="@+id/linha_login_email"
            app:layout_constraintTop_toTopOf="@+id/linha_login_email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottonOf="@+id/linha_login_email"
            app:layout_constraintBottom_toTopOf="@id/text_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:background="@color/colorTextButton"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/prompt_password"
            app:layout_constraintBottom_toTopOf="@id/email_sign_in_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/prompt_password"
                android:background="@color/colorTextButton"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="4dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
